--- a/scss/layout/mains/_precompra-main.scss
+++ b/scss/layout/mains/_precompra-main.scss
@@ -10,11 +10,11 @@ body{
                 margin-left: 4%;
                 margin-top: 5%;
                 h1{
-                    color: black;
+                    color: $color-principal-a;
                     font-size: 30px;
                 }
                 h2{
-                    color: black;
+                    color: $color-principal-a;
                     margin-bottom: 16px;
                     font-size: 26px;
                 }
@@ -39,14 +39,14 @@ body{
                 border: solid #141414 1px;
                 border-radius: 10px;
                 padding: 40px;
-                height: 654px;
+                height: 668px;
                 box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
                 .limite{
                     width: 300px;
                 }
                 .titulito{
                     font-size: 39px;
-                    color: black;
+                    color: $color-principal-a;
                 }
                 p{
                     margin: 3px;
@@ -107,11 +107,10 @@ body{
                     margin: 15px;
                     margin-top: 30px;
                     input{
-                        width: 100%;
-                        height: 40px;
-                        background-color: white;
+                        @include alto-ancho(40px, 100%);
+                        background-color: $color-principal-b;
                         border-radius: 12px;
-                        color: black;
+                        color: $color-principal-a;
                         font-weight: bold;
                         box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
                     }
@@ -124,12 +123,11 @@ body{
                 .comprar-ya{
                     width: 100%;
                     input{
-                        width: 100%;
-                        height: 40px;
-                        background-color:black;
+                        @include alto-ancho(40px, 100%);
+                        background-color:$color-principal-a;
                         border-radius: 12px;
                         font-weight: bold;
-                        color: white;
+                        color: $color-principal-b;
                         box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
                     }
                 }
@@ -140,7 +138,7 @@ body{
                 margin-top: 60px;
                 h2{
                     font-size: 24px;
-                    color: black;
+                    color: $color-principal-a;
                     margin: 0%;
                 }
                 a{
