--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+@import "./utilities/mixins";
+@import "./utilities/variables";
 @import "./base/reset";
 @import "./layout/header";
 @import "./layout/footer";
